# drf-api

./: README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
elementaryparticles/: asgi.py  settings.py  urls.py  wsgi.py
particles/: admin.py  models.py  permissions.py  views.py
particles/migrations/: 0001_initial.py
